--- a/index.html
+++ b/index.html
@@ -1,18 +1,424 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CodersCamp | Projekt 1 - HTML i CSS</title>
-    <meta name="description" content="CodersCamp to darmowy, otwarty kurs programowania webowego we Wrocławiu. Sprawdź, czego nauczysz się na CodersCamp i spróbuj swoich sił w branży IT!">
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Kuba Szajna</title>
+  </head>
 
-</head>
+  <body>
+    <div class="overlay">
+      <h1>kuba szajna</h1>
+      <span>architect & web developer</span>
+    </div>
+    <div id="main" class="scroll-container">
+      <section class="wrapper">
+        <div class="nav">
+          <div class="logo">
+            <h1>
+              <span>kuba<br />sza<br />jna</span>
+              <br />
+              inventive life
+            </h1>
+          </div>
 
-<body>
+          <div class="menu-links">
+            <ul>
+              <a href="#">
+                <li>home.</li>
+              </a>
+              <a href="#">
+                <li>about.</li>
+              </a>
+              <a href="">
+                <li>projects.</li>
+              </a>
+              <a href="#">
+                <li>contact.</li>
+              </a>
+            </ul>
+          </div>
 
-<p>CodersCamp - projekt 1. Tutaj możesz zacząć swoją zabawę!</p>
+          <div class="scrolldown">
+            <div class="scrolldown-rotate">
+              <div class="scrolldown-rotate-line"></div>
+              <a href="#1">scroll</a>
+            </div>
+          </div>
+        </div>
 
-</body>
+        <div class="text">
+          <div class="title">portfolio</div>
+          <p>
+            Lorem ipsum dolor sit amet, <br />
+            consectetur adipiscing elit, sed do eiusmod.
+          </p>
+        </div>
+
+        <div class="watchnow">
+          <i class="fa fa-play"></i>
+          <a href="#">contact me</a>
+        </div>
+
+        <div class="media">
+          <ul>
+            <li><i class="fa fa-facebook"></i></li>
+            <li><i class="fa fa-twitter"></i></li>
+            <li><i class="fa fa-instagram"></i></li>
+          </ul>
+        </div>
+
+        <div class="ellipse-container">
+          <div class="ellipse thin"></div>
+          <div class="ellipse thick"></div>
+          <div class="ellipse yellow"></div>
+        </div>
+      </section>
+    </div>
+
+    <!-- About me -->
+    <div class="container about-me">
+      <div class="container-width">
+        <div class="container-middle">
+          <div class="title-block title-project">
+            <h3 class=""><span>About</span><br />me</h3>
+          </div>
+          <div class="content-block">
+            <p>
+              <strong
+                >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.</strong
+              ><br /><br />Ut enim ad minim veniam, quis nostrud exercitation
+              ullamco laboris nisi ut aliquip ex ea commodo consequat aute irure
+              dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.<br /><br />
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi architecto beatae vitae
+              dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+              aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+              eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+              est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+              velit, sed quia non numquam eius modi tempora incidunt ut labore
+              et dolore magnam aliquam quaerat voluptatem.
+            </p>
+            <div class="signature">
+              <img src="./images/signature.png" alt="men" />
+            </div>
+            <div class="media about-me-media">
+              <ul>
+                <li><i class="fa fa-facebook"></i></li>
+                <li><i class="fa fa-twitter"></i></li>
+                <li><i class="fa fa-instagram"></i></li>
+              </ul>
+            </div>
+          </div>
+          <div class="image-block">
+            <img src="./images/men.jpg" alt="men" />
+            <button></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Knowledge Section -->
+    <div class="container knowledge">
+      <div class="container-width">
+        <div class="container-middle">
+          <ul class="knowledge-content">
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/laptop.svg"
+                  alt="Laptop"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  Web development
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/pencil.svg"
+                  alt="Pencil"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  UI / UX Design
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/cell-phone.svg"
+                  alt="Mobile"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  App development
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/photo-camera.svg"
+                  alt="Camera"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  Photography
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/paper-plane.svg"
+                  alt="Plane"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  Rebranding
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+            <li class="knowledge-content__item">
+              <div class="knowledge-content__item--left">
+                <img
+                  src="./images/house-building.svg"
+                  alt="Building"
+                  class="knowledge-content__item--icon"
+                />
+              </div>
+              <div class="knowledge-content__item__container">
+                <div class="knowledge-content__item__container--title">
+                  Architecture
+                </div>
+                <p class="knowledge-content__item__container--desc">
+                  Lorem ipsum dolor sit amet,<br />
+                  consectetur adipiscing elit, sed do eiusmod.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <div class="title-block title-knowledge">
+            <h3 class=""><span>My</span><br />Services</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="container project-it"></div> -->
+
+    <!-- Project Section -->
+    <div class="container project-architecture">
+      <div class="container-width">
+        <div class="container-middle">
+          <div class="title-block title-project">
+            <h3 class=""><span>My</span><br />Projects</h3>
+          </div>
+          <div class="project-gallery">
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Summer House
+                </div>
+                <img
+                  src="./images/house5.jpg"
+                  alt="House"
+                  style="width: 100%"
+                />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Brick House
+                </div>
+                <img
+                  src="./images/house2.jpg"
+                  alt="House"
+                  style="width: 100%"
+                />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Renovated
+                </div>
+                <img
+                  src="./images/house3.jpg"
+                  alt="House"
+                  style="width: 100%"
+                />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Barn House
+                </div>
+                <img
+                  src="./images/house4.jpg"
+                  alt="House"
+                  style="width: 100%"
+                />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Summer House
+                </div>
+                <img src="./images/house2.jpg" alt="House" style="width: 99%" />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Brick House
+                </div>
+                <img src="./images/house5.jpg" alt="House" style="width: 99%" />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Renovated
+                </div>
+                <img src="./images/house4.jpg" alt="House" style="width: 99%" />
+              </div>
+            </div>
+            <div class="project-gallery__item">
+              <div class="project-gallery__item__container">
+                <div class="project-gallery__item__container--title">
+                  Barn House
+                </div>
+                <img src="./images/house3.jpg" alt="House" style="width: 99%" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container contact-me">
+      <div class="container-width">
+        <div class="container-middle">
+          <div class="title-block title-contact">
+            <h3 class=""><span>Contact</span><br />me</h3>
+          </div>
+          <div class="contact-me__image-contatainer">
+            <img src="./images/contact.jpg" alt="Contact">
+          </div>
+          <div class="contact-me__input-container">
+          <form action="">
+            <div class="row">
+              <div class="contact-me__input-container--label">
+                <label for="fname">First Name</label>
+              </div>
+              <div class="contact-me__input-container--input">
+                <input
+                  type="text"
+                  id="fname"
+                  name="firstname"
+                  placeholder="Your name.."
+                />
+              </div>
+            </div>
+            <div class="row">
+              <div class="contact-me__input-container--label">
+                <label for="lname">Last Name</label>
+              </div>
+              <div class="contact-me__input-container--input">
+                <input
+                  type="text"
+                  id="lname"
+                  name="lastname"
+                  placeholder="Your last name.."
+                />
+              </div>
+            </div>
+            <div class="row">
+              <div class="contact-me__input-container--label">
+                <label for="country">Country</label>
+              </div>
+              <div class="contact-me__input-container--input">
+                <select id="country" name="country">
+                  <option value="australia">Poland</option>
+                  <option value="australia">Australia</option>
+                  <option value="canada">Canada</option>
+                  <option value="usa">USA</option>
+                </select>
+              </div>
+            </div>
+            <div class="row">
+              <div class="contact-me__input-container--label">
+                <label for="subject">Subject</label>
+              </div>
+              <div class="contact-me__input-container--input">
+                <textarea
+                  id="subject"
+                  name="subject"
+                  placeholder="Write something.."
+                  style="height: 200px"
+                ></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <input type="submit" value="Submit" />
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
