--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="scrolldown">
             <div class="scrolldown-rotate">
               <div class="scrolldown-rotate-line"></div>
-              <a href="#1">scroll</a>
+              <a href="#about-me">scroll</a>
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@
 
         <div class="watchnow">
           <i class="fa fa-play"></i>
-          <a href="#">contact me</a>
+          <a href="#contact-me">contact me</a>
         </div>
 
         <div class="media">
