CSS variables + HTML5

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div id="main" class="main">
       <section class="wrapper">
-        <div class="nav">
+        <aside class="nav-container">
           <div class="logo">
             <h1>
               <span>kuba<br />sza<br />jna</span>
@@ -34,7 +34,7 @@
             </h1>
           </div>
 
-          <div class="menu-links">
+          <nav class="menu-links">
             <ul>
               <li>
                 <a href="#main">
@@ -57,7 +57,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </nav>
 
           <div class="scrolldown">
             <div class="scrolldown-rotate">
@@ -65,7 +65,7 @@
               <a href="#about-me">scroll</a>
             </div>
           </div>
-        </div>
+        </aside>
 
         <div class="text">
           <div class="title">portfolio</div>
@@ -97,14 +97,14 @@
     </div>
 
     <!-- About me -->
-    <div id="about-me" class="container about-me">
+    <section id="about-me" class="container about-me">
       <div class="container-width">
         <div class="container-middle">
           <div class="title-block title-project">
             <h3 class=""><span>About</span><br />me</h3>
           </div>
           <div class="content-block">
-            <p>
+            <article>
               <strong
                 >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna
@@ -124,7 +124,7 @@
               est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
               velit, sed quia non numquam eius modi tempora incidunt ut labore
               et dolore magnam aliquam quaerat voluptatem.
-            </p>
+            </article>
             <div class="signature">
               <img src="./images/signature.png" alt="men" />
             </div>
@@ -142,10 +142,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Knowledge Section -->
-    <div id="knowledge" class="container knowledge">
+    <section id="knowledge" class="container knowledge">
       <div class="container-width">
         <div class="container-middle">
           <div class="title-block title-knowledge title-knowledge-mobile">
@@ -266,11 +266,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- <div class="container project-it"></div> -->
 
     <!-- Project Section -->
-    <div id="project-architecture" class="container project-architecture">
+    <section id="project-architecture" class="container project-architecture">
       <div class="container-width">
         <div class="container-middle">
           <div class="title-block title-project">
@@ -360,10 +360,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Contact me -->
-    <div id="contact-me" class="container contact-me">
+    <section id="contact-me" class="container contact-me">
       <div class="container-width">
         <div class="container-middle">
           <div class="title-block title-contact">
@@ -432,6 +432,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
