--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
     </div>
 
-    <!-- About me -->
+    <!__ About me __>
     <section id="about-me" class="container about-me">
       <div class="container-width">
         <div class="container-middle">
@@ -144,7 +144,7 @@
       </div>
     </section>
 
-    <!-- Knowledge Section -->
+    <!__ Knowledge Section __>
     <section id="knowledge" class="container knowledge">
       <div class="container-width">
         <div class="container-middle">
@@ -153,108 +153,108 @@
           </div>
           <ul class="knowledge-content">
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/laptop.svg"
                   alt="Laptop"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   Web development
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
               </div>
             </li>
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/pencil.svg"
                   alt="Pencil"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   UI / UX Design
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
               </div>
             </li>
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/cell-phone.svg"
                   alt="Mobile"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   App development
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
               </div>
             </li>
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/photo-camera.svg"
                   alt="Camera"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   Photography
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
               </div>
             </li>
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/paper-plane.svg"
                   alt="Plane"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   Rebranding
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
               </div>
             </li>
             <li class="knowledge-content__item">
-              <div class="knowledge-content__item--left">
+              <div class="knowledge-content__item__left">
                 <img
                   src="./images/house-building.svg"
                   alt="Building"
-                  class="knowledge-content__item--icon"
+                  class="knowledge-content__item__icon"
                 />
               </div>
               <div class="knowledge-content__item__container">
-                <div class="knowledge-content__item__container--title">
+                <div class="knowledge-content__item__container__title">
                   Architecture
                 </div>
-                <p class="knowledge-content__item__container--desc">
+                <p class="knowledge-content__item__container__desc">
                   Lorem ipsum dolor sit amet,<br />
                   consectetur adipiscing elit, sed do eiusmod.
                 </p>
@@ -267,9 +267,9 @@
         </div>
       </div>
     </section>
-    <!-- <div class="container project-it"></div> -->
+    <!__ <div class="container project-it"></div> __>
 
-    <!-- Project Section -->
+    <!__ Project Section __>
     <section id="project-architecture" class="container project-architecture">
       <div class="container-width">
         <div class="container-middle">
@@ -279,7 +279,7 @@
           <div class="project-gallery">
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Summer House
                 </div>
                 <img
@@ -291,7 +291,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Brick House
                 </div>
                 <img
@@ -303,7 +303,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Renovated
                 </div>
                 <img
@@ -315,7 +315,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Barn House
                 </div>
                 <img
@@ -327,7 +327,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Summer House
                 </div>
                 <img src="./images/house2.jpg" alt="House" style="width: 99%" />
@@ -335,7 +335,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Brick House
                 </div>
                 <img src="./images/house5.jpg" alt="House" style="width: 99%" />
@@ -343,7 +343,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Renovated
                 </div>
                 <img src="./images/house4.jpg" alt="House" style="width: 99%" />
@@ -351,7 +351,7 @@
             </div>
             <div class="project-gallery__item">
               <div class="project-gallery__item__container">
-                <div class="project-gallery__item__container--title">
+                <div class="project-gallery__item__container__title">
                   Barn House
                 </div>
                 <img src="./images/house3.jpg" alt="House" style="width: 99%" />
@@ -362,7 +362,7 @@
       </div>
     </section>
 
-    <!-- Contact me -->
+    <!__ Contact me __>
     <section id="contact-me" class="container contact-me">
       <div class="container-width">
         <div class="container-middle">
@@ -375,10 +375,10 @@
           <div class="contact-me__input-container">
             <form action="">
               <div class="row">
-                <div class="contact-me__input-container--label">
+                <div class="contact-me__input-container__label">
                   <label for="fname">First Name</label>
                 </div>
-                <div class="contact-me__input-container--input">
+                <div class="contact-me__input-container__input">
                   <input
                     type="text"
                     id="fname"
@@ -388,10 +388,10 @@
                 </div>
               </div>
               <div class="row">
-                <div class="contact-me__input-container--label">
+                <div class="contact-me__input-container__label">
                   <label for="lname">Last Name</label>
                 </div>
-                <div class="contact-me__input-container--input">
+                <div class="contact-me__input-container__input">
                   <input
                     type="text"
                     id="lname"
@@ -401,10 +401,10 @@
                 </div>
               </div>
               <div class="row">
-                <div class="contact-me__input-container--label">
+                <div class="contact-me__input-container__label">
                   <label for="country">Country</label>
                 </div>
-                <div class="contact-me__input-container--input">
+                <div class="contact-me__input-container__input">
                   <select id="country" name="country">
                     <option value="australia">Poland</option>
                     <option value="australia">Australia</option>
@@ -414,10 +414,10 @@
                 </div>
               </div>
               <div class="row">
-                <div class="contact-me__input-container--label">
+                <div class="contact-me__input-container__label">
                   <label for="subject">Subject</label>
                 </div>
-                <div class="contact-me__input-container--input">
+                <div class="contact-me__input-container__input">
                   <textarea
                     id="subject"
                     name="subject"
